# ChangeLog for app-admin/glance
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/glance/ChangeLog,v 1.76 2015/07/29 18:12:47 zlogene Exp $

  29 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> glance-2015.1.0-r1.ebuild:
  x86 stable wrt bug #556188

  29 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> glance-2015.1.0.ebuild:
  x86 stable wrt bug #554284

  29 Jul 2015; Agostino Sarubbo <ago@gentoo.org> glance-2015.1.0-r1.ebuild:
  Stable for amd64, wrt bug #556188

*glance-2015.1.0-r1 (29 Jul 2015)

  29 Jul 2015; Matthew Thode <prometheanfire@gentoo.org>
  +files/CVE-2015-3289_2015.1.0.patch, +glance-2015.1.0-r1.ebuild:
  bumping for CVE-2015-3289

  18 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> glance-2015.1.0.ebuild:
  amd64 stable wrt bug #554284

  09 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Updating remote-id in metadata.xml

  22 May 2015; Matthew Thode <prometheanfire@gentoo.org> glance-2014.2.3.ebuild,
  glance-2014.2.9999.ebuild, glance-2015.1.0.ebuild, glance-2015.1.9999.ebuild:
  fixing requests deps

  04 May 2015; Matthew Thode <prometheanfire@gentoo.org> glance-2015.1.0.ebuild,
  glance-2015.1.9999.ebuild:
  turns out you can't glob in quotes

  04 May 2015; Matthew Thode <prometheanfire@gentoo.org> glance-2015.1.0.ebuild,
  glance-2015.1.9999.ebuild:
  fix installing files that don't exist

  30 Apr 2015; Matthew Thode <prometheanfire@gentoo.org> glance-2015.1.0.ebuild:
  adding keywords

*glance-2015.1.0 (30 Apr 2015)
*glance-2015.1.9999 (30 Apr 2015)

  30 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +glance-2015.1.0.ebuild, +glance-2015.1.9999.ebuild:
  now with more kilo

  13 Apr 2015; Matthew Thode <prometheanfire@gentoo.org> glance-2014.2.3.ebuild,
  glance-2014.2.9999.ebuild:
  syncing to stable/juno

  13 Apr 2015; Matthew Thode <prometheanfire@gentoo.org> glance-2014.2.3.ebuild:
  try signing again

*glance-2014.2.3 (13 Apr 2015)
