@@ -11,16 +11,15 @@ DIST glance-2015.1.0.tar.gz 1100719 SHA256 0d8be9f28b1686de3d0d1037498eaaf717d39
 EBUILD glance-2014.2.3.ebuild 6039 SHA256 f24748da45ad30a8ae2476580de57211a6cfd3b3ec61131747db520d985eacec SHA512 a3a0331cd798bebdd268084700569823d1c15e7128a5ba3f512b642fe8f95c6abc553aaaf65a4dfe3b160109b09dd8c0ce1673a3992691600a2f2706530befa0 WHIRLPOOL b598821a118da0159ec0c5b8644e71d609902b1725011c9024412d7f20e5257639992f6641dd3440f645777749c53bc1bd8076abd791140d1cbc3e30750e3973
 EBUILD glance-2014.2.9999.ebuild 6050 SHA256 4d635412e9e750e9746d976b2ae7f678b4ec364a9485a54d461faefc3255b297 SHA512 cfa163e1ab038507021c72d73a3a9a6fae11a54cf1d52799b3696fd437848b83a934f1760efb2a1143484fa53c295818648b5a664a471bd546eb5be2ffda3577 WHIRLPOOL 6149a9f2070d9ad8d82f7044ee1e5b7c5456a707ff279cb1cb50da39aed4eb6c3a3b2a6fb56797bdf03baf28ef335fb15352c76f6194c369101e45a005976217
 EBUILD glance-2015.1.0-r1.ebuild 6651 SHA256 4cf14769e4c7f50b4efdeda3d4d19ff796777ad86550bf9034c1618aa079c330 SHA512 fe19df1dd7a8c4a22a3a587d2ac3834bead3138d629c180aadaef91d7369c5b7e8e02be84e504e65226faf159b9e4a8c6880b14adefae6cfc564a225ea40eb83 WHIRLPOOL aaa117aa260ed1007a126e4fbe347d52c23b3c624cad73e27831b37c8c5451226266542a346dab087ac383ec57b96eeb852343206795310cb70b25b34226802f
-EBUILD glance-2015.1.0.ebuild 6604 SHA256 d09c57ab4313c83eeacf13939bb7e9008b067c6df70eebb280888e7da272a50e SHA512 636fb59c41955a29ad5aa3d7c2f70013edc77dc455c7004613da9c7fdc4a47838dbb90d37108e8afe1f95b8aba1e35b97ca809f07041320b333dea699b7b6c03 WHIRLPOOL e5d0409534ddc30606ba8e9050f28923f788382472a778abf5291d82c53683688047a480d5b6fa3f5b0392683d6d79d354bf58fd547727f22603e4e693cb2a03
 EBUILD glance-2015.1.9999.ebuild 6623 SHA256 6a1a2199bd94ed97dab93cbe4043bad04e2cb6d5f9e4b7175641b8bbddb053c3 SHA512 28311194982c85dd14f2ebc4a90c53dd1fc2840c061439e7bded0eba1ccad66c449a1838d52adc481714be282f3b6b66954b3131e263e4a4c97c976a4223a420 WHIRLPOOL df1d27ec0579fc20773f3bdd223fb3efbf4a78af5f1395db983775c0fed668670fa8276ba98fbcac9ac530f98d11898683e0eebda315e03427a4196d92cba6b9
-MISC ChangeLog 14630 SHA256 b0e779fd3989aaab4633a73319df95fc4e54b4dccc8d9a058f35fa5e47c0c445 SHA512 1461098634248a623948a99dbd2ed9484721c7d807525b53983d04b4da7ea6b01ca238a0899873cc0484a4065a68acf70ecb93e75b0e9c90f7226eb633a243b5 WHIRLPOOL 963e21b37ef353ab669672cab40cb185074e17a4a1a7891f997d2f1ba806abae28bded143a136fc8cbe3f84aed4fb2a65b61bfb2444685ca741a1dcffad7e8c6
+MISC ChangeLog 14744 SHA256 75ccbca7962c6dfb48b6c93a77750605d1c8ef08084525e0f9a23f6c0930655b SHA512 35b04861652b6cf283be377db85800042ab7acc5e27fbe5f20804cbe03b49795b96fce0cac4a8e6081cb194b7c3e81794782597531e01ac2cbdeeca1b519e3aa WHIRLPOOL 5e4c508a899b41ad88686df48155a0714cf5d28b9229fa9458a643e0c0df48ad3333ea623ad30ea4d68510e5e210623b947c4c54323c09fab90300c02e5aabfb
 MISC metadata.xml 684 SHA256 1ef788456271f080736aea2b5b997f6bbe69e5682dc1e95c923ce77c5235eb78 SHA512 325e17a5fb4840a87e93fb4947cebeec1788b483a4ef64f615efbef07e17b79ca5dcc8637420dd3e7bf89ea858eea25e47d48bdaf07e0aa77df5b40aeeff7c06 WHIRLPOOL 821b3e8cf042676c408a0d8918b609a34fdc4270f960c14e831475669bfa7c2fc9acc1ef1839ad28749979ebeabb7bf1e0a8b1fa39a139c3fb4a5fbf4ff63bcf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlW5FxMACgkQG9wOWsQutdaL+QP/e4J+8HsHO8wCFhkbqCuNn20m
-hIPfinO21DaLK3HCYlRBHftxA/G2cd4YcDC7MFPNyiE0CCHEQ3ddtb+HGf4+WO1N
-TjiEiHLur9gNbPtD8mz9Y+5L0wSgjM+v2ZxYZHm7Hrk03RDMSLaV9DSW70YoksFI
-+zx/1oxPeJv/wd/i1b8=
-=A52U
+iJwEAQEIAAYFAlW5F/wACgkQG9wOWsQutdaEFQQAlpHr6ZxzipsQ8c5ARNFOpBRZ
+K4pYgoz26+/f+aJt0IjCWHXcLXAROTDb6xlU2/68dW68ZvCsHLQK8KLL8geOjoVZ
+HAUIDqBpZTlBEeEo5/xB60xLTZG8jMqvOihfCpjdy/PCPfiNqZ8j+PtifMTsWeWJ
+uHbLz43phnAXc+RFafc=
+=hkXa
 -----END PGP SIGNATURE-----
