@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/glance
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/glance/ChangeLog,v 1.76 2015/07/29 18:12:47 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/glance/ChangeLog,v 1.77 2015/07/29 18:16:39 zlogene Exp $
+
+  29 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> -glance-2015.1.0.ebuild:
+  Drop insecure version (bug #556188)
 
   29 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> glance-2015.1.0-r1.ebuild:
   x86 stable wrt bug #556188
